# aries-cloudapi-python

./: .codacy.yaml  .dockerignore  .editorconfig  .env.example  .env.sample  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Tiltfile  coverage.xml  create_ecr_repos.sh  dependencies.py  docker-compose-ledger.local.env  docker-compose-ledger.yaml  docker-compose.yaml  junit.xml  listen_webhooks.py  loop_tests.sh  main.py  manage  pylintreport.txt  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.txt  setup_env.sh  sonar-project.properties  test.sh  trustregistry.db  (+1 more)
app/: .gitignore  .pylintrc  acapy_ledger_facade.py  acapy_uplink_facade.py  acapy_wallet_facade.py  agent_factory.py  api.py  clients_web.py  constants.py  coverage.xml  dependencies.py  facade.py  ledger_facade.py  listener.py  main.py  pyproject.toml  requirements.txt  role.py  schemas.py  setup.cfg  trust_registry_facade.py  utils.py  webhook_listener.py  webhooks.py
app/admin/: admin.py  credential_definitions.py  schemas.py  wallet.py
app/admin/governance/: credential_definitions.py  dids.py  (+2 more)
app/config/: log_config.py
app/core/: agent_factory.py  delegates.py  wallet.py
app/dependencies/: acapy_client_roles_container.py  acapy_clients.py  auth.py  role.py
app/error/: __init__.py  cloud_api_error.py
app/event_handling/: listener.py  sse_listener.py  webhooks.py  websocket_connection_manager.py  websocket_manager.py
app/exceptions/: __init__.py  cloud_api_error.py  cloudapi_exception.py  handle_acapy_call.py  handle_model_with_validation.py  trust_registry_exception.py
app/facades/: acapy_connections.py  acapy_ledger.py  acapy_wallet.py  ledger.py  revocation_registry.py  sse.py  trust_registry.py  webhooks.py
app/generic/: connections.py  definitions.py  issuer_v2.py  issuers_v1.py  messaging.py  models.py  sse.py  trust_registry.py  webhooks.py
app/models/: connections.py  definitions.py  issuer.py  jsonld.py  jws.py  messaging.py  oob.py  sd_jws.py  tenants.py  trust_registry.py  verifier.py  wallet.py
app/postman/: postman-collection.json
app/routers/: .gitattributes  governance.py  issuer.py  schema.py  verifier.py  wallet.py
app/routes/: connections.py  definitions.py  issuer.py  jsonld.py  messaging.py  oob.py  revocation.py  sse.py  trust_registry.py  verifier.py  wallet.py  webhooks.py  websocket_endpoint.py
app/services/: acapy_ledger.py  acapy_wallet.py  definitions.py  onboarding.py  revocation_registry.py  sse.py  trust_registry.py  webhooks.py  websocket.py
app/tests/: conftest.py  test_acapy_ledger_facade.py  test_acapy_uplink.py  test_acapy_wallet_facade.py  test_agent_factory.py  test_auth.py  test_connections.py  test_definitions.py  test_dependencies.py  test_did.py  test_exception_handler.py  test_facade.py  test_issuer_v1.py  test_issuer_v2.py  test_main.py  test_messaging.py  test_trust_registry_facade.py  test_util_definitions.py  test_util_did.py  test_util_webhooks.py  test_utils.py  test_via_web_wallet.py  test_wallet.py  test_wallet_uplink.py  utils_test.py
app/util/: acapy_issuer_utils.py  acapy_verifier_utils.py  assert_connection_metadata.py  assert_public_did.py  caching.py  check_endorser_connection.py  credentials.py  definitions.py  did.py  extract_validation_error.py  indy.py  pagination.py  retry_method.py  rich_async_client.py  rich_parsing.py  save_exchange_record.py  string.py  tenants.py  transaction_acked.py  wallet_map.py
endorser/: .gitignore  README.md  constants.py  endorser_processor.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
endorser/config/: log_config.py
endorser/services/: endorsement_processor.py
endorser/tests/: conftest.py  test_endorser_processor.py  test_main.py  test_util_endorsement.py  test_util_transaction_record.py  test_util_trust_registry.py
endorser/util/: endorsement.py  transaction_record.py  trust_registry.py
endorser/utils/: endorsement.py
trustregistry/: alembic.ini  app.db  crud.py  database.py  db.py  dependencies.py  list_type.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  setup.cfg  trustregistry.db  utils.py
trustregistry/config/: log_config.py
trustregistry/migrations/: README.md  env.py
trustregistry/registry/: actor.py  actors.py  registry_actors.py  registry_schemas.py  schema.py  schemas.py
trustregistry/registryfiles/: trustregistry.json  trustregistry_test.json
trustregistry/tests/: test.db  test_actor.py  test_crud.py  test_db.py  test_dependencies.py  test_list_type.py  test_main.py  test_models.py  test_registry_actors.py  test_registry_schema.py  test_schema.py  test_schemas.py
waypoint/: main.py  pyproject.toml
waypoint/routers/: sse.py
waypoint/routes/: sse.py
waypoint/services/: nats_service.py
waypoint/tests/: test_main.py
waypoint/util/: event_generator_wrapper.py
webhooks/: clients.example.py  clients.py  containers.py  main.py  models.py  pyproject.toml  requirements.txt  server_sent_events.py  services.py  sse_manager.py  tests.py
webhooks/config/: log_config.py
webhooks/dependencies/: container.py  event_generator_wrapper.py  redis.py  redis_service.py  service.py  sse_manager.py  websocket.py
webhooks/models/: __init__.py  billing_payloads.py  conversions.py  redis_payloads.py  topic_mapping.py  topic_payloads.py  webhook_models.py
webhooks/routers/: events.py  receive_events.py  sse.py  webhooks.py
webhooks/services/: acapy_events_processor.py  acapy_redis_events_processor.py  billing_manager.py  billing_processor.py  redis_service.py  sse_manager.py  webhooks_redis_serivce.py  webhooks_redis_service.py
webhooks/tests/: conftest.py  test_acapy_events_processor.py  test_billing_manager.py  test_main.py  test_receive_events.py  test_redis_service.py  test_sse.py  test_sse_manager.py  test_util_billing.py  test_webhook_models.py  test_webhooks.py  tests.py
webhooks/util/: billing.py  event_generator_wrapper.py
webhooks/web/: main.py
(+892 files in other folders)
