[tool.poetry]
name = "cloudapi"
version = "4.0.0"
description = "Main project configuration for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.coverage.run]
omit = [
  "app/tests/*",
  "endorser/tests/*",
  "trustregistry/tests/*",
  "waypoint/tests/*",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
asyncio_default_fixture_loop_scope = "module"
