[tool.poetry]
name = "acapy-cloud"
version = "4.2.0"
description = "Main project configuration for acapy-cloud"
authors = [
  "Mourits de Beer <mourits.debeer@didx.co.za>",
  "Cloete du Preez <cloete.dupreez@didx.co.za>",
]
package-mode = false

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.isort]
profile = "black"
