[tool.poetry]
name = "cloudapi-app"
version = "3.4.0"
description = "Main app submodule for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aiohttp = "~3.10.5"
aries-cloudcontroller = "==1.0.0b0"
base58 = "~2.1.1"
fastapi = "~0.115.0"
httpx = "~0.27.0"
loguru = "~0.7.2"
orjson = "~3.10.7"
pydantic = "~2.9.0"
pyjwt = "~2.9.0"
PyYAML = "~6.0.2"
typing-extensions = "~4.12.0"
uvicorn = { version = "~0.31.0" }
ddtrace = "^2.14.0"
scalar-fastapi = "^1.0.3"

[tool.poetry.dev-dependencies]
anyio = "~4.6.0"
assertpy = "==1.1"
black = "~24.8.0"
isort = "~5.13.2"
mockito = "~1.5.0"
pre-commit = "~3.8.0"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~5.0.0"
pytest-mock = "~3.14.0"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
