[tool.poetry]
name = "cloudapi-app"
version = "4.1.0"
description = "Main app submodule for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aiohttp = "~3.11.7"
aries-cloudcontroller = "==1.2.0.post20241205"
base58 = "~2.1.1"
fastapi = "~0.115.0"
httpx = "~0.28.0"
loguru = "~0.7.2"
orjson = "~3.10.7"
pydantic = "~2.10.1"
pyjwt = "~2.10.0"
PyYAML = "~6.0.2"
typing-extensions = "~4.12.0"
uvicorn = "~0.32.1"
ddtrace = "^2.17.0"
scalar-fastapi = "^1.0.3"

[tool.poetry.dev-dependencies]
anyio = "~4.7.0"
assertpy = "==1.1"
black = "~24.10.0"
isort = "~5.13.2"
mockito = "~1.5.0"
pre-commit = "~4.0.1"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~6.0.0"
pytest-mock = "~3.14.0"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
