[tool.poetry]
name = "cloudapi-endorser"
version = "3.3.0"
description = "Endorser submodule for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aries-cloudcontroller = "==1.0.0rc4"
dependency-injector-fork = "~=4.42.1"                    # https://github.com/ets-labs/python-dependency-injector/pull/765#issuecomment-1915100744
fastapi = "~0.111.0"
httpx = "~0.27.0"
loguru = "~0.7.2"
orjson = "~3.10.0"
pydantic = "~2.8.2"
redis = "~=5.1.0b5"
uvicorn = { version = "~0.30.0", extras = ["standard"] }

[tool.poetry.dev-dependencies]
anyio = "~4.4.0"
black = "~24.4.2"
isort = "~5.13.2"
pre-commit = "~3.7.0"
pylint = "~3.2.2"
pytest = "~8.2.0"
pytest-cov = "~5.0.0"
pytest-mock = "~3.14.0"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
