[tool.poetry]
name = "cloudapi-endorser"
version = "4.2.0"
description = "Endorser submodule for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

aries-cloudcontroller = "==1.2.0.post20241205"
dependency-injector = "~=4.45.0"
fastapi = "~0.115.0"
httpx = "~0.28.0"
nats-py = { extras = ["nkeys"], version = "^2.9.0" }
loguru = "~0.7.2"
orjson = "~3.10.7"
pydantic = "~2.10.1"
uvicorn = "~0.34.0"
ddtrace = "^2.20.0"
scalar-fastapi = "^1.0.3"
tenacity = "^9.0.0"
six = "^1.17.0"                                      # Just to force using same version as app

[tool.poetry.group.dev.dependencies]
anyio = "~4.8.0"
black = "~24.10.0"
isort = "~5.13.2"
pre-commit = "~4.1.0"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~6.0.0"
pytest-mock = "~3.14.0"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
