[tool.poetry]
name = "acapy-cloud-trust-registry"
version = "4.2.0"
description = "Trust Registry submodule for acapy-cloud"
authors = [
  "Mourits de Beer <mourits.debeer@didx.co.za>",
  "Cloete du Preez <cloete.dupreez@didx.co.za>",
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"

alembic = "~1.14.0"
fastapi = "~0.115.0"
httpx = "~0.28.0"
loguru = "~0.7.2"
orjson = "~3.10.7"
psycopg2-binary = "~=2.9.6"
pydantic = "~2.10.1"
scalar-fastapi = "^1.0.3"
sqlalchemy = "~=2.0.19"
uvicorn = "~0.34.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
anyio = "~4.8.0"
black = "~25.1.0"
isort = "~6.0.0"
pre-commit = "~4.1.0"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~6.0.0"
pytest-mock = "~3.14.0"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
