[tool.poetry]
name = "cloudapi-waypoint"
version = "3.3.0"
description = "End state service for cloudapi"
authors = ["cl0ete <cloete.dupreez@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aiohttp = "~3.10.5"
dependency-injector-fork = "~=4.42.1"
fastapi = "~0.115.0"
loguru = "~0.7.2"
httpx = "~0.27.0"
nats-py = {extras = ["nkeys"], version = "^2.9.0"}
orjson = "~3.10.7"
pydantic = "~2.9.0"
typing-extensions = "~4.12.0"
uvicorn = { version = "~0.30.5", extras = ["standard"] }
sse-starlette = "~=2.1.3"

[tool.poetry.dev-dependencies]
anyio = "~4.6.0"
assertpy = "==1.1"
black = "~24.8.0"
isort = "~5.13.2"
mockito = "~1.5.0"
pre-commit = "~3.8.0"
pylint = "~3.3.0"
pytest = "~8.3.2"
pytest-cov = "~5.0.0"
pytest-mock = "~3.14.0"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
