[tool.poetry]
name = "cloudapi-webhooks-service"
version = "3.3.0"
description = "Webhooks Service submodule for cloudapi"
authors = ["Mourits de Beer <ff137@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aries-cloudcontroller = "==1.0.0rc4"
dependency-injector-fork = "~=4.42.1"                    # https://github.com/ets-labs/python-dependency-injector/pull/765#issuecomment-1915100744
fastapi = "~0.111.0"
fastapi_websocket_pubsub = "~=0.3.8"
httpx = "~0.27.0"
loguru = "~0.7.2"
orjson = "~3.10.0"
pydantic = "~2.8.2"
redis = "~=5.1.0b5"
sse-starlette = "~=2.1.0"
typing-extensions = "~=4.12.0"
uvicorn = { version = "~0.30.3", extras = ["standard"] }

[tool.poetry.dev-dependencies]
anyio = "~4.4.0"
black = "~24.4.2"
isort = "~5.13.2"
pre-commit = "~3.7.0"
pylint = "~3.2.6"
pytest = "~8.3.1"
pytest-cov = "~5.0.0"
pytest-mock = "~3.14.0"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml -p no:cacheprovider --cov-report=xml --cov-report=term"
junit_family = "xunit2"
